--- a/WebGarageSale/requirements.txt
+++ b/WebGarageSale/requirements.txt
@@ -2,11 +2,15 @@ appdirs==1.4.4
 asgiref==3.4.1
 binance==0.3
 cbpro==1.1.4
+colorama==0.4.4
+configparser==5.2.0
+crayons==0.4.0
 distlib==0.3.4
 Django==3.2.9
 filelock==3.4.0
 numpy==1.21.4
 pandas==1.3.4
+pbr==5.8.1
 Pillow==8.4.0
 pymongo==3.5.1
 python-dateutil==2.8.2
@@ -15,8 +19,9 @@ requests==2.13.0
 six==1.10.0
 sortedcontainers==2.4.0
 sqlparse==0.2.4
+stevedore==3.5.0
 virtualenv==20.4.6
-virtualenv-clone==0.5.6
+virtualenv-clone==0.5.6g
 virtualenvwrapper==4.8.4
 webdriver-manager==3.4.2
 websocket-client==0.40.0
