--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 appdirs==1.4.4
 asgiref==3.4.1
+autopep8==1.6.0
 binance==0.3
 cbpro==1.1.4
+colorama==0.4.4
+configparser==5.2.0
+crayons==0.4.0
 distlib==0.3.4
 Django==3.2.9
+django-resized==0.3.11
 filelock==3.4.0
+gunicorn==20.1.0
 numpy==1.21.4
 pandas==1.3.4
+pbr==5.8.1
 Pillow==8.4.0
+pycodestyle==2.8.0
 pymongo==3.5.1
 python-dateutil==2.8.2
 pytz==2021.3
@@ -15,6 +23,8 @@ requests==2.13.0
 six==1.10.0
 sortedcontainers==2.4.0
 sqlparse==0.2.4
+stevedore==3.5.0
+toml==0.10.2
 virtualenv==20.4.6
 virtualenv-clone==0.5.6
 virtualenvwrapper==4.8.4
