--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,17 @@ crayons==0.4.0
 distlib==0.3.4
 Django==3.2.9
 django-resized==0.3.11
+djongo==1.3.6
+dnspython==2.2.0
 filelock==3.4.0
 gunicorn==20.1.0
+mongoengine==0.23.1
 numpy==1.21.4
 pandas==1.3.4
 pbr==5.8.1
 Pillow==8.4.0
 pycodestyle==2.8.0
-pymongo==3.5.1
+pymongo==3.12.3
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.13.0
